--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
         </div>
       </div>
     </section>
+    <div class=""> </div>
     <!--  -->
     <script src="js/script.js"></script>
   </body>
