--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
                   alt="avatar"
                   class="fp-user__avatar-img"
                 />
-                <div
-                  class="fp-user__forum-staff fp-user__forum-staff_moder"
-                ></div>
                 <!-- <div
-                    class="fp-user__forum-staff fp-user__forum-staff_admin"
-                    // Иконка изменится
-                  ></div> -->
+                  class="fp-user__forum-staff fp-user__forum-staff_moder"
+                ></div> -->
+                <div
+                  class="fp-user__forum-staff fp-user__forum-staff_admin"
+                ></div>
               </a>
               <div class="fp-user__info">
                 <div class="fp__ng fp__ng_m">
@@ -202,9 +201,9 @@
                   alt="avatar"
                   class="fp-user__avatar-img"
                 />
-                <div
+                <!-- <div
                   class="fp-user__forum-staff fp-user__forum-staff_moder"
-                ></div>
+                ></div> -->
                 <!-- <div
                     class="fp-user__forum-staff fp-user__forum-staff_admin"
                     // Иконка изменится
@@ -217,9 +216,7 @@
                     class="fp__nick fp__nick_m"
                     >NickNameName1234</a
                   >
-                  <p class="fp__group fp__group_m fp__group_admin">
-                    Администратор
-                  </p>
+                  <p class="fp__group fp__group_m fp__group_legend">Legend</p>
                 </div>
                 <div class="fp-user__ss">
                   <div class="fp-user__stats">
@@ -244,7 +241,7 @@
                 class="fp__nick"
                 >NickNameName1234</a
               >
-              <p class="fp__group fp__group_admin">Администратор</p>
+              <p class="fp__group fp__group_legend">Legend</p>
             </div>
             <div class="fp__da">
               <p class="fp__date">15 декабря 2023, 20:53</p>
@@ -255,6 +252,120 @@
               >
             </div>
             <div class="fp__content">Hello</div>
+            <div class="fp__subcontent">
+              <div class="fp__subcontent-side fp__subcontent-side_left">
+                <div class="fp__subcontent-log">
+                  <!-- <p class="fp__edited">
+                    Отредактировано <a href="#">NickNameName1234</a> 16.12.2023,
+                    22:51
+                  </p>
+                  <p class="fp__deleted">
+                    Удалено <a href="#">NickNameName1234</a> 18.12.2023, 01:36
+                  </p> -->
+                </div>
+              </div>
+              <div class="fp__subcontent-side fp__subcontent-side_right">
+                <div class="fp__subcontent-reactions-wrapper">
+                  <div class="fp__reactions">
+                    <div class="fp__reaction_like">
+                      <p class="fp-num fp-num_r">221</p>
+                    </div>
+                    <div class="fp__reaction_dislike">
+                      <p class="fp-num fp-num_r">0</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="fp__reactions-count">221</p>
+              </div>
+            </div>
+          </div>
+          <div class="fp__side fp__side_bottom">
+            <div class="fp__sign"></div>
+          </div>
+        </div>
+        <div class="fp fp_deleted">
+          <div class="fp__arqed-menu"></div>
+          <div class="fp__arqed">
+            <div class="fp__arq">
+              <div class="fp__at"></div>
+              <div class="fp__reply"></div>
+              <div class="fp__quote"></div>
+            </div>
+            <div class="fp__ed">
+              <div class="fp__edit"></div>
+              <div class="fp__delete"></div>
+            </div>
+          </div>
+          <div class="fp__side fp__side_left">
+            <div class="fp-user">
+              <a
+                href="#"
+                class="fp-user__avatar"
+              >
+                <img
+                  src="images/avatar-black.jpg"
+                  alt="avatar"
+                  class="fp-user__avatar-img"
+                />
+                <div
+                  class="fp-user__forum-staff fp-user__forum-staff_moder"
+                ></div>
+                <!-- <div
+                    class="fp-user__forum-staff fp-user__forum-staff_admin"
+                    // Иконка изменится
+                  ></div> -->
+              </a>
+              <div class="fp-user__info">
+                <div class="fp__ng fp__ng_m">
+                  <a
+                    href="#"
+                    class="fp__nick fp__nick_m"
+                    >NickNameName1234</a
+                  >
+                  <p class="fp__group fp__group_m fp__group_admin">Модератор</p>
+                </div>
+                <div class="fp-user__ss">
+                  <div class="fp-user__stats">
+                    <div class="fp-user__stat fp-user__stat_reputation">
+                      <p class="fp-num">12</p>
+                    </div>
+                    <div class="fp-user__stat fp-user__stat_comments">
+                      <p class="fp-num">145</p>
+                    </div>
+                    <div class="fp-user__stat fp-user__stat_topday">
+                      <p class="fp-num">8</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="fp__side fp__side_right">
+            <div class="fp__ng">
+              <a
+                href="#"
+                class="fp__nick"
+                >NickNameName1234</a
+              >
+              <p class="fp__group fp__group_admin">Модератор</p>
+            </div>
+            <div class="fp__da">
+              <p class="fp__date">15 декабря 2023, 20:53</p>
+              <a
+                href="#"
+                class="fp__anchor"
+                >#3481</a
+              >
+            </div>
+            <div class="fp__content">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              expedita commodi in, tenetur distinctio minus maxime possimus sunt
+              molestias nostrum animi, sit consequatur accusantium laborum
+              inventore a quis omnis voluptate iusto. Quae quam voluptatem
+              laboriosam dignissimos, suscipit, laborum blanditiis pariatur
+              voluptas esse doloremque ducimus dolores a ea quos, laudantium
+              mollitia.
+            </div>
             <div class="fp__subcontent">
               <div class="fp__subcontent-side fp__subcontent-side_left">
                 <div class="fp__subcontent-log">
